# rpg-rust

./: .env.example  .gitignore  .rpgignore  Cargo.toml  LICENSE  README.md  graph.dot  llm_debug.txt
rpg-encoder/: Cargo.toml  README.md
rpg-encoder/benches/: encoder.rs  fixtures.rs  graph.rs  memory.rs  parser.rs
rpg-encoder/docs/: api-reference.md  architecture.md  configuration.md  getting-started.md  semantic-features.md
rpg-encoder/examples/: basic.rs  llm_debug.rs  validate.rs  visualize.rs
rpg-encoder/examples/test-repo/: graph.dot
rpg-encoder/examples/test-repo/c/: rpg_math.c  rpg_math.h
rpg-encoder/examples/test-repo/go/: rpgmath.go
rpg-encoder/examples/test-repo/java/: MathClient.java
rpg-encoder/examples/test-repo/js/: rpg_math.d.ts  rpg_math.js
rpg-encoder/examples/test-repo/python/: rpg_math.py
rpg-encoder/examples/test-repo/rust/: lib.rs  math.rs
rpg-encoder/src/: components.rs  error.rs  features.rs  lib.rs  skeleton.rs  tasks.rs
rpg-encoder/src/agents/: extractor.rs  mod.rs  rate_limiter.rs
rpg-encoder/src/agents/prompts/: assign_features.txt  feature_extraction.txt  identify_areas.txt  mod.rs  prompt_manager.rs
rpg-encoder/src/config/: loader.rs
rpg-encoder/src/core/: edge.rs  graph.rs  id.rs  location.rs  mod.rs  node.rs
rpg-encoder/src/encoder/: builder.rs  functional.rs  mod.rs  output.rs  validation.rs  walker.rs
rpg-encoder/src/encoder/builder/: calls.rs  extends.rs  ffi.rs  impls.rs  imports.rs  mod.rs  type_refs.rs
rpg-encoder/src/incremental/: diff.rs  evolution.rs  evolution_llm.rs  hash.rs  mod.rs  snapshot.rs
rpg-encoder/src/languages/: builtins.rs  c.rs  c_shared.rs  cpp.rs  csharp.rs  ffi.rs  go.rs  haskell.rs  java.rs  javascript.rs  js_shared.rs  lua.rs  mod.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
rpg-encoder/src/llm/: client.rs  mod.rs  types.rs
rpg-encoder/src/ops/: explore.rs  fetch.rs  mod.rs  search.rs
rpg-encoder/src/parser/: base.rs  docs.rs  helpers.rs  mod.rs  trait.rs  types.rs
rpg-encoder/src/storage/: base.rs  manifest.rs  mod.rs  patch.rs  store.rs
rpg-encoder/src/utils/: case.rs  mod.rs  similarity.rs
rpg-encoder/tests/: COVERAGE.md  integration_test.rs  llm_response_debug.rs
rpg-encoder/tests/core/: edge_test.rs  graph_edge_test.rs  graph_test.rs  id_test.rs  location_test.rs  node_test.rs
rpg-encoder/tests/encoder/: builder_link_test.rs  builder_test.rs  cross_repo_test.rs  encoder_edge_test.rs  output_edge_test.rs  output_test.rs  resolution_test.rs  validation_test.rs  walker_test.rs
rpg-encoder/tests/error/: error_edge_test.rs  error_test.rs
rpg-encoder/tests/fixtures/c/: basic.c
rpg-encoder/tests/fixtures/cpp/: basic.cpp  extern_c.cpp
rpg-encoder/tests/fixtures/csharp/: Basic.cs  PInvoke.cs
rpg-encoder/tests/fixtures/docs/c/: doxygen_header.h
rpg-encoder/tests/fixtures/docs/cpp/: doxygen_cpp.cpp
rpg-encoder/tests/fixtures/docs/csharp/: xml_doc.cs
rpg-encoder/tests/fixtures/docs/go/: block_comment.go  line_comment.go  no_doc.go  struct_doc.go  unicode_doc.go
rpg-encoder/tests/fixtures/docs/haskell/: haddock_module.hs
rpg-encoder/tests/fixtures/docs/java/: javadoc_class.java  javadoc_deprecated.java  javadoc_enum.java  javadoc_record.java  no_javadoc.java
rpg-encoder/tests/fixtures/docs/javascript/: block_comment.js  jsdoc_basic.js  jsdoc_class.js  (+4 more)
rpg-encoder/tests/fixtures/go/: basic.go  cgo.go
rpg-encoder/tests/fixtures/haskell/: Basic.hs  FFI.hs
rpg-encoder/tests/fixtures/java/: Basic.java  Jni.java
rpg-encoder/tests/fixtures/javascript/: basic.js  native.js
rpg-encoder/tests/fixtures/lua/: basic.lua  ffi.lua
rpg-encoder/tests/fixtures/python/: basic.py  ffi_cffi.py  ffi_ctypes.py
rpg-encoder/tests/fixtures/ruby/: basic.rb  ffi.rb
rpg-encoder/tests/fixtures/rust/: basic.rs  ffi.rs  types.rs
rpg-encoder/tests/fixtures/scala/: Basic.scala  FFI.scala
rpg-encoder/tests/fixtures/swift/: basic.swift  ffi.swift
rpg-encoder/tests/fixtures/typescript/: basic.ts  generics.ts
rpg-encoder/tests/incremental/: diff_test.rs  evolution_test.rs  incremental_test.rs  snapshot_edge_test.rs
rpg-encoder/tests/languages/: c_edge_test.rs  c_test.rs  cpp_edge_test.rs  cpp_test.rs  csharp_edge_test.rs  csharp_test.rs  ffi_edge_test.rs  go_edge_test.rs  go_test.rs  haskell_edge_test.rs  haskell_test.rs  java_edge_test.rs  java_test.rs  javascript_edge_test.rs  javascript_test.rs  lua_edge_test.rs  lua_test.rs  python_edge_test.rs  python_test.rs  ruby_edge_test.rs  ruby_test.rs  rust_edge_test.rs  rust_test.rs  scala_edge_test.rs  scala_test.rs  swift_edge_test.rs  swift_test.rs  typescript_edge_test.rs  typescript_test.rs
rpg-encoder/tests/llm/: agents_test.rs  config_test.rs  contract_test.rs  e2e_test.rs
rpg-encoder/tests/parser/: docs_c_cpp_test.rs  docs_csharp_test.rs  docs_haskell_test.rs  docs_lua_test.rs  docs_ruby_test.rs  docs_scala_test.rs  registry_test.rs
rpg-encoder/tests/property/: generators.rs  graph_property_test.rs  mod.rs  node_property_test.rs  parser_property_test.rs
rpg-encoder/tests/snapshots/: graph_snapshot_test.rs  rust_parser_snapshot_test.rs
rpg-encoder/tests/storage/: integration_test.rs  prop_test.proptest-regressions  prop_test.rs
rpg-generator/: Cargo.toml  README.md
rpg-generator/examples/: basic_gen.rs
rpg-generator/src/: centroid_expander.rs  error.rs  lib.rs  pipeline.rs  verification.rs
rpg-generator/src/agent/: capabilities.rs  claude.rs  context.rs  mod.rs  opencode.rs  optimizer.rs  prompt.rs  trae.rs
rpg-generator/src/checkpoint/: manager.rs  mod.rs
rpg-generator/src/contract/: mod.rs  registry.rs  verifier.rs
rpg-generator/src/execution/: mod.rs  plan.rs
rpg-generator/src/llm/: client.rs  config.rs  mod.rs  openai.rs
rpg-generator/src/phases/: agent_parsing.rs  implementation.rs  mod.rs  prompts.rs  property.rs  types.rs
rpg-generator/src/test_runner/: mod.rs  shell.rs
rpg-generator/src/types/: mod.rs  phase.rs  plan.rs  request.rs
rpg-mcp/: Cargo.toml  Dockerfile
rpg-mcp/src/: main.rs  service.rs  state.rs  watcher.rs
rpg-mcp/tests/: integration.rs
(+28 files in other folders)
