[workspace]
resolver = "2"
members = [
    "rpg-encoder",
    "rpg-generator",
]

[workspace.dependencies]
petgraph = "0.7"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-lua = "0.2"
tree-sitter-haskell = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-scala = "0.24"
ignore = "0.4"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[profile.bench]
debug = true

