[package]
name = "rpg-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rpg-encoder = { path = "../rpg-encoder", features = ["llm"] }
rmcp = { version = "0.6", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
notify = "8"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
dotenvy = "0.15"

[dev-dependencies]
rmcp = { version = "0.6", features = ["server", "client", "transport-child-process"] }
